--- a/src/app/admin/components/manage-author/manage-author.component.html
+++ b/src/app/admin/components/manage-author/manage-author.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-row">
     <mat-form-field class="basis-1/2 pt-4">
         <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+        <input matInput placeholder="Ex. Mia" #searchValue>
     </mat-form-field>
     <span class="grow"></span>
     <button mat-fab extended color="primary" class="self-center" (click)='addAuthor()'>
@@ -49,7 +49,7 @@
 
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{ searchValue.value}}"</td>
         </tr>
     </table>
 
