--- a/src/app/admin/components/manage-author/manage-author.component.html
+++ b/src/app/admin/components/manage-author/manage-author.component.html
@@ -1,10 +1,10 @@
 <div class="flex flex-row">
     <mat-form-field class="basis-1/2 pt-4">
-        <mat-label>Filter</mat-label>
+        <mat-label i18n>Filter</mat-label>
         <input matInput placeholder="Ex. Mia" #searchValue>
     </mat-form-field>
     <span class="grow"></span>
-    <button mat-fab extended color="primary" class="self-center" (click)='addAuthor()'>
+    <button mat-fab extended color="primary" class="self-center" (click)='addAuthor()' i18n>
         <mat-icon>add</mat-icon>
         Add Author
     </button>
@@ -15,19 +15,19 @@
 
         <!-- ID Column -->
         <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="author.id">ID</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="author.id" i18n>ID</th>
             <td mat-cell *matCellDef="let row"> {{row.id}} </td>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="author.name">Name</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="author.name" i18n>Name</th>
             <td mat-cell *matCellDef="let row"> {{row.name}} </td>
         </ng-container>
 
         <!-- Subname Column -->
         <ng-container matColumnDef="subname">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="author.subname">Subname</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="author.subname" i18n>Subname</th>
             <td mat-cell *matCellDef="let row"> {{row.subname}} </td>
         </ng-container>
 
@@ -49,7 +49,7 @@
 
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{ searchValue.value}}"</td>
+        <td class="mat-cell" colspan="4" i18n>No data matching the filter "{{ searchValue.value}}"</td>
         </tr>
     </table>
 
