--- a/src/app/admin/components/manage-movie/manage-movie.component.html
+++ b/src/app/admin/components/manage-movie/manage-movie.component.html
@@ -1,10 +1,10 @@
 <div class="flex flex-row">
     <mat-form-field class="basis-1/2 pt-4">
-        <mat-label>Filter</mat-label>
+        <mat-label i18n>Filter</mat-label>
         <input matInput placeholder="Ex. Mia" #searchValue>
     </mat-form-field>
     <span class="grow"></span>
-    <button mat-fab extended color="primary" class="self-center" (click)='addMovie()'>
+    <button mat-fab extended color="primary" class="self-center" (click)='addMovie()' i18n>
         <mat-icon>add</mat-icon>
         Add movie
     </button>
@@ -15,25 +15,25 @@
 
         <!-- ID Column -->
         <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.id">ID</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.id" i18n>ID</th>
             <td mat-cell *matCellDef="let row"> {{row.id}} </td>
         </ng-container>
 
         <!-- Title Column -->
         <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.title">Title</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.title" i18n>Title</th>
             <td mat-cell *matCellDef="let row"> {{row.title}} </td>
         </ng-container>
 
         <!-- Subtitle Column -->
         <ng-container matColumnDef="subtitle">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.subtitle">Subtitle</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.subtitle" i18n>Subtitle</th>
             <td mat-cell *matCellDef="let row"> {{row.subtitle}} </td>
         </ng-container>
 
         <!-- Author Column -->
         <ng-container matColumnDef="author">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.author.name">Author</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.author.name" i18n>Author</th>
             <td mat-cell *matCellDef="let row"> {{row.author.name}} </td>
         </ng-container>
 
@@ -55,7 +55,7 @@
 
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{searchValue.value}}"</td>
+        <td class="mat-cell" colspan="4" i18n>No data matching the filter "{{searchValue.value}}"</td>
         </tr>
     </table>
 
