--- a/src/app/admin/components/movie-dialog/movie-dialog.component.html
+++ b/src/app/admin/components/movie-dialog/movie-dialog.component.html
@@ -26,30 +26,7 @@
       </mat-form-field>
     </div>
     <div class="flex flex-row justify-start">
-      <mat-form-field class="grow basis-1">
-        <mat-label i18n>Tags</mat-label>
-        <mat-chip-grid #chipGrid>
-          @for(tag of movie.tags; track tag.name) {
-            <mat-chip-row>
-              {{tag.name}}
-              <button matChipRemove [attr.aria-label]="'remove ' + tag.name" (click)="removeTag(tag)">
-                <mat-icon>cancel</mat-icon>
-              </button>
-            </mat-chip-row>
-          }
-          <input placeholder="New tag" #tagInput formControlName="tag"
-            [matChipInputFor]="chipGrid" [matAutocomplete]="autoTags"
-            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-            (matChipInputTokenEnd)="addTag($event)"/>
-          <mat-autocomplete #autoTags="matAutocomplete" (optionSelected)="addTag($event); tagInput.value = ''">
-            @for(tag of tagsList; track tag.id) {
-              <mat-option [value]="tag">
-                {{tag?.name}}
-              </mat-option>
-            }
-          </mat-autocomplete>
-        </mat-chip-grid>
-      </mat-form-field>
+      <app-tag-autocomplete [(tags)]="movie.tags" placeholder="Tags" [allowNew]="true" class="grow basis-1"></app-tag-autocomplete>  
     </div>
   </form>
 
