--- a/src/app/components/tags/tags.component.html
+++ b/src/app/components/tags/tags.component.html
@@ -25,7 +25,7 @@
 </div>
 
 <mat-list style="flex-grow: 1; overflow: auto">
-  @for(tag of tags; track tag.id) {
+  @for(tag of tags(); track tag.id) {
     <mat-list-item>
       <span class="flex flex-row items-center">
         <label class="grow truncate" [title]="tag.name">{{tag.name}}</label>
