Hide playlist tab in search Set language switch color to red when enabled

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,8 +1,8 @@
 <mat-form-field class="p-4 w-full">
   <input matInput i18n-placeholder placeholder="Search" value="" #searchValue>
 </mat-form-field>
-<mat-tab-group>
-  <mat-tab i18n-label label="Movies">
+<!--<mat-tab-group>
+  <mat-tab i18n-label label="Movies">-->
     <mat-action-list style="flex-grow: 1; overflow: auto">
       @if(showLatest) {
         <mat-list-item i18n>Movies newly added:</mat-list-item>
@@ -18,10 +18,10 @@
         </mat-list-item>
       }
     </mat-action-list>
-  </mat-tab>
+  <!--</mat-tab>
   <mat-tab i18n-label label="Playlists">
     <mat-action-list style="flex-grow: 1; overflow: auto">
       <mat-list-item i18n>Not implemented...</mat-list-item>
     </mat-action-list>
   </mat-tab>
-</mat-tab-group>
+</mat-tab-group>-->
