--- a/src/app/components/main-content/main-content.component.html
+++ b/src/app/components/main-content/main-content.component.html
@@ -19,7 +19,7 @@
             <h2 class="alt" id='authorName'><a class="cursor-pointer" (click)='searchAuthor()' i18n-matTooltip matTooltip="Search this author">{{ getAuthorName() }}</a></h2>
             <h2 class="alt" id='movieTitle'>&nbsp;- {{ getMovieTitle() }}</h2>
             @if(movie.subtitle != '' || movie.author.subname != '') {
-              <h2 id='switchDisplay'>&nbsp;<a class="cursor-pointer" (click)='this.showSub = !this.showSub' i18n-matTooltip matTooltip="Show japanese"><mat-icon>{{ showSub ? 'toggle_on' : 'toggle_off' }}</mat-icon></a></h2>
+              <h2 id='switchDisplay'>&nbsp;<a class="cursor-pointer" (click)='this.showSub = !this.showSub' i18n-matTooltip matTooltip="Show japanese"><mat-icon [ngStyle]="{color: showSub ? 'red' : null}">{{ showSub ? 'toggle_on' : 'toggle_off' }}</mat-icon></a></h2>
             }
           </div>
         }
