--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,13 +4,13 @@
 <!--<mat-tab-group>
   <mat-tab i18n-label label="Movies">-->
     <mat-action-list style="flex-grow: 1; overflow: auto">
-      @if(showLatest) {
+      @if (true) {
         <mat-list-item i18n>Movies newly added:</mat-list-item>
       }
-      @if(searching) {
+      @if (searching) {
         <mat-list-item><mat-spinner diameter="25"></mat-spinner>&nbsp;<span i18n>Searching...</span></mat-list-item>
       }
-      @for(item of ($data | async)?.data; track item.id) {
+      @for (item of ($data | async)?.data; track item.id) {
         <mat-list-item (click)="play(item.id)" #item (mouseenter)="item.isOver = true" (mouseleave)="item.isOver = false">
           <img matListItemAvatar src="https://i1.ytimg.com/vi/{{item.linkId}}/mqdefault.jpg" [ngClass]="{'animate-spin': item.isOver}">
           <span matListItemTitle>{{item.title}}</span>
