--- a/src/app/components/main-content/main-content.component.html
+++ b/src/app/components/main-content/main-content.component.html
@@ -16,11 +16,12 @@
           </div>
         } @else {
           <div class="flex flex-row justify-center content-center">
-            <h2 class="alt" id='authorName'><a class="cursor-pointer" (click)='searchAuthor()' i18n-matTooltip matTooltip="Search this author">{{ getAuthorName() }}</a></h2>
-            <h2 class="alt" id='movieTitle'>&nbsp;- {{ getMovieTitle() }}</h2>
-            @if(movie.subtitle != '' || movie.author.subname != '') {
-              <h2>&nbsp;<mat-slide-toggle [(ngModel)]="showSub" i18n-matTooltip matTooltip="Show japanese"></mat-slide-toggle></h2>
-            }
+            <h2 class="alt" id='authorTitle'>
+              <a class="cursor-pointer" (click)='searchAuthor()' i18n-matTooltip matTooltip="Search this author">{{ getAuthorName() }}</a> - {{ getMovieTitle() }}
+              @if(movie.subtitle != '' || movie.author.subname != '') {
+                &nbsp;<mat-slide-toggle [(ngModel)]="showSub" i18n-matTooltip matTooltip="Show japanese"></mat-slide-toggle>
+              }
+            </h2>
           </div>
         }
       </header>
