Add tags management in admin Reload movie before editing it Add youtube ID column in movie management

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,12 +4,17 @@
     <mat-tab-group>
       <mat-tab i18n-label label="Movies">
         <div class="flex flex-row justify-center">
-          <pbi-manage-movie class="grow m-8"></pbi-manage-movie>
+          <pbi-movie-manage class="grow m-8"></pbi-movie-manage>
         </div>
       </mat-tab>
       <mat-tab i18n-label label="Authors">
         <div class="flex flex-row justify-center">
-          <pbi-manage-author class="grow m-8"></pbi-manage-author>
+          <pbi-author-manage class="grow m-8"></pbi-author-manage>
+        </div>
+      </mat-tab>
+      <mat-tab i18n-label label="Tags">
+        <div class="flex flex-row justify-center">
+          <pbi-tag-manage class="grow m-8"></pbi-tag-manage>
         </div>
       </mat-tab>
     </mat-tab-group>
