--- a/src/app/admin/components/movie-manage/movie-manage.component.html
+++ b/src/app/admin/components/movie-manage/movie-manage.component.html
@@ -37,6 +37,12 @@
             <td mat-cell *matCellDef="let row"> {{row.author.name}} </td>
         </ng-container>
 
+        <!-- Youtube ID Column -->
+        <ng-container matColumnDef="youtubeId">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.linkId" i18n>Youtube ID</th>
+            <td mat-cell *matCellDef="let row"> {{row.linkId}} </td>
+        </ng-container>
+
         <!-- Buttons Column -->
         <ng-container matColumnDef="edit">
             <th mat-header-cell *matHeaderCellDef></th>
