--- a/src/app/admin/components/movie-manage/movie-manage.component.html
+++ b/src/app/admin/components/movie-manage/movie-manage.component.html
@@ -33,7 +33,7 @@
 
         <!-- Author Column -->
         <ng-container matColumnDef="author">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.author.name" i18n>Author</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="author.name" i18n>Author</th>
             <td mat-cell *matCellDef="let row"> {{row.author.name}} </td>
         </ng-container>
 
@@ -41,6 +41,12 @@
         <ng-container matColumnDef="youtubeId">
             <th mat-header-cell *matHeaderCellDef mat-sort-header="movie.linkId" i18n>Youtube ID</th>
             <td mat-cell *matCellDef="let row"> {{row.linkId}} </td>
+        </ng-container>
+
+        <!-- Tags Column -->
+        <ng-container matColumnDef="tags">
+            <th mat-header-cell *matHeaderCellDef i18n>Tags</th>
+            <td mat-cell *matCellDef="let row"> {{ formatTags(row.tags) }} </td>
         </ng-container>
 
         <!-- Buttons Column -->
