Allow basic user to add movie (not validated by default) Allow to see not validated movies in admin Click on Youtube ID (in admin) open movie on YT

--- a/src/app/admin/components/movie-dialog/movie-dialog.component.html
+++ b/src/app/admin/components/movie-dialog/movie-dialog.component.html
@@ -25,6 +25,11 @@
         <input matInput formControlName="linkId">
       </mat-form-field>
     </div>
+    @if(authService.getUser().isAdmin) {
+      <div class="flex flex-row justify-start">
+        <mat-checkbox formControlName="validated" i18n>Validated</mat-checkbox>
+      </div>
+    }
     <div class="flex flex-row justify-start">
       <app-tag-autocomplete [(tags)]="movie.tags" placeholder="Tags" [allowNew]="true" class="grow basis-1"></app-tag-autocomplete>  
     </div>
