--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,11 +4,15 @@
 <!--<mat-tab-group>
   <mat-tab i18n-label label="Movies">-->
     <mat-action-list style="flex-grow: 1; overflow: auto">
-      @if (true) {
+      @if (searchValue.value == '') {
         <mat-list-item i18n>Movies newly added:</mat-list-item>
       }
       @if (searching) {
-        <mat-list-item><mat-spinner diameter="25"></mat-spinner>&nbsp;<span i18n>Searching...</span></mat-list-item>
+        <mat-list-item>
+          <div class="flex">
+            <mat-spinner diameter="25"></mat-spinner>&nbsp;<span i18n>Searching...</span>
+          </div>
+        </mat-list-item>
       }
       @for (item of ($data | async)?.data; track item.id) {
         <mat-list-item (click)="play(item.id)" #item (mouseenter)="item.isOver = true" (mouseleave)="item.isOver = false">
