Add seach help Allows to open admin tabs directly Reduce logo size

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,22 +1,15 @@
 <pbi-navbar [buttons]="headerButtons"></pbi-navbar>
 <mat-sidenav-container>
   <mat-sidenav-content>
-    <mat-tab-group>
-      <mat-tab i18n-label label="Movies">
-        <div class="flex flex-row justify-center">
-          <pbi-movie-manage class="grow m-8"></pbi-movie-manage>
-        </div>
-      </mat-tab>
-      <mat-tab i18n-label label="Authors">
-        <div class="flex flex-row justify-center">
-          <pbi-author-manage class="grow m-8"></pbi-author-manage>
-        </div>
-      </mat-tab>
-      <mat-tab i18n-label label="Tags">
-        <div class="flex flex-row justify-center">
-          <pbi-tag-manage class="grow m-8"></pbi-tag-manage>
-        </div>
-      </mat-tab>
-    </mat-tab-group>
+    <nav mat-tab-nav-bar mat-stretch-tabs="true" mat-align-tabs="start" [tabPanel]="tabPanel">
+      @for (link of links; track link) {
+      <a mat-tab-link (click)="activePath = link.path" [active]="link.path == activePath" [routerLink]="link.path">
+        {{ link.label }}
+      </a>
+      }
+    </nav>
+    <mat-tab-nav-panel #tabPanel>
+      <router-outlet></router-outlet>
+    </mat-tab-nav-panel>
   </mat-sidenav-content>
 </mat-sidenav-container>
