--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -39,7 +39,7 @@
     </mat-tab>
   </mat-tab-group>
 </mat-dialog-content>
-<mat-dialog-actions>
+<mat-dialog-actions align="end">
   <button mat-raised-button mat-dialog-close i18n>Cancel</button>
   @if(loginTab.isActive) {
     <button mat-raised-button color="primary" (click)="login()" i18n>Login</button>
