--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,5 +1,8 @@
 <mat-form-field class="p-4 w-full">
   <input matInput i18n-placeholder placeholder="Search" value="" #searchValue>
+  <button matIconSuffix mat-icon-button (click)="showHelp()" class="pr-2">
+    <mat-icon>help</mat-icon>
+  </button>
 </mat-form-field>
 <!--<mat-tab-group>
   <mat-tab i18n-label label="Movies">-->
